--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <servlet-api.version>3.1.0</servlet-api.version>
         <aspectjweaver.version>1.8.9</aspectjweaver.version>
         <persistence-api.version>1.0.2</persistence-api.version>
-        <mysql.version>6.0.6</mysql.version>
+        <oracle.version>11.2.0.1.0</oracle.version>
         <druid.version>1.0.25</druid.version>
         <jackson.version>2.9.1</jackson.version>
     </properties>
@@ -88,9 +88,9 @@
         </dependency>
         <!--JDBC,Druid 链接池 Database-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>${oracle.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
