--- a/src/main/resources/conf/application.properties
+++ b/src/main/resources/conf/application.properties
@@ -1,10 +1,13 @@
-#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #Êý¾Ý¿â
-jdbc.url=jdbc:mysql://localhost:3306/party_building?serverTimezone=UTC&useSSL=true
+#jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/party_building?serverTimezone=UTC&useSSL=true
+#jdbc.username=root
+#jdbc.password=root
 
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:oracle:thin:@10.1.227.137:1521/zgs02
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.username=blsjtj
+jdbc.password=blsjtj
 jdbc.initialSize=2
 jdbc.maxActive=8
 
