--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <oracle.version>11.2.0.1.0</oracle.version>
         <druid.version>1.0.25</druid.version>
         <jackson.version>2.9.1</jackson.version>
+        <UserAgentUtils.version>1.20</UserAgentUtils.version>
     </properties>
 
     <dependencies>
@@ -124,7 +125,12 @@
             <!--<artifactId>jackson-annotations</artifactId>-->
             <!--<version>${jackson.version}</version>-->
         <!--</dependency>-->
-
+        <!-- https://mvnrepository.com/artifact/eu.bitwalker/UserAgentUtils -->
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>${UserAgentUtils.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>CRExpress</finalName>
