--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <druid.version>1.0.25</druid.version>
         <jackson.version>2.9.1</jackson.version>
         <UserAgentUtils.version>1.20</UserAgentUtils.version>
+        <poi.version>3.14</poi.version>
     </properties>
 
     <dependencies>
@@ -131,6 +132,18 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>${UserAgentUtils.version}</version>
         </dependency>
+        <!-- POI -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>CRExpress</finalName>
