--- a/src/main/resources/conf/application.properties
+++ b/src/main/resources/conf/application.properties
@@ -14,3 +14,14 @@ jdbc.maxActive=8
 #·þÎñÆ÷
 dynamicServer=http://localhost:8080
 resourceServer=http://localhost:8080
+
+
+#Redis
+redis.host=127.0.0.1
+redis.port=6379
+redis.database=
+redis.pass=
+redis.maxIdle=300
+redis.maxActive=600
+redis.maxWait=1000
+redis.testOnBorrow=true
